src/service/worker/sidekiq/snapshots/roadster__service__worker__sidekiq__app_worker__deserialize_tests__app_worker@case_6.snap
---
source: src/service/worker/sidekiq/app_worker.rs
expression: app_worker
---
disable-argument-coercion = false
